Add temp static changes for windlerdev

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -48,6 +48,12 @@
         </ul>
       </div>
       {{ end }}
+      <div class="col-md-4 col-sm-12">        
+        <ul>
+          <li><a class="smooth-scroll" href="{{ relref . "/posts/legal/imprint.md" }}">Impressum</a></li>
+          <li><a class="smooth-scroll" href="{{ relref . "/posts/legal/dataprotection.md" }}">Datenschutzerklärung</a></li>
+        </ul>
+      </div>
       {{ if site.Params.newsletter.enable }}
       <div class="col-md-4 col-sm-12">
         <!-- <h5>Newsletter</h5> -->
