--- a/layouts/partials/sections/home.html
+++ b/layouts/partials/sections/home.html
@@ -25,6 +25,7 @@
   {{ $authorImage = $author.image }}
 {{ end }}
 
+{{ site.Data.dataprotection.Content }}
 <div class="container-fluid home" id="home">
   <div
     class="background container-fluid"
