--- a/layouts/partials/navigators/navbar.html
+++ b/layouts/partials/navigators/navbar.html
@@ -15,7 +15,9 @@
 <nav class="navbar navbar-expand-xl top-navbar initial-navbar" id="top-navbar">
   <div class="container">
     <a class="navbar-brand" href="{{ site.BaseURL | relLangURL }}">
+      {{ if site.Params.logo.show }}
       <img src="{{ $invertedLogo | relURL }}" id="logo">
+      {{ end }}
       {{- site.Title -}}
     </a>
     <button
