--- a/layouts/partials/sections/experiences.html
+++ b/layouts/partials/sections/experiences.html
@@ -13,17 +13,17 @@
    {{ range $index,$experience:= .experiences }}
      {{ if eq (mod $index 2) 0 }}
        <div class="row align-items-center  d-flex">
-         {{ partial "sections/experiences/vertical-line.html" $index }}
+         {{ partial "sections/experiences/vertical-line.html" (sub $totalExperiences $index) }}
          {{ partial "sections/experiences/experience-info.html" $experience }}
        </div>
      {{else}}
        <div class="row align-items-center justify-content-end d-flex">
          {{ partial "sections/experiences/experience-info.html" $experience }}
-         {{ partial "sections/experiences/vertical-line.html" $index }}
+         {{ partial "sections/experiences/vertical-line.html" (sub $totalExperiences $index) }}
        </div>
      {{ end }}
      {{ if lt $index (sub $totalExperiences 1) }}
-       {{ partial "sections/experiences/horizontal-line.html" $index }}
+       {{ partial "sections/experiences/horizontal-line.html" (sub $totalExperiences $index) }}
      {{ end }}
    {{ end }}
   </div>
